--- a/server/redirect.html
+++ b/server/redirect.html
@@ -73,13 +73,13 @@
   <section>
     <div style="margin:100px;">
       <div class="jumbotron">
-        <h1>Kirjautuminen onnistui!</h1>
-        <p>Voitte sulkea välilehden ja sen jälkeen päivittää nettisivunne.</p>
-        <p>Päivittäkää nettisivunne painamalla
+        <h1>Authentication was successfull!</h1>
+        <p>You can now close the tab and update your web page.</p>
+        <p>Update the web page pressing
           <i class="material-icons">
             refresh
-          </i> tai F5 näppäintä.</p>
-        <p>Facebook nostojen tulisi näkyä tämän jälkeen normaalisti.</p>
+          </i> or F5 key.</p>
+        <p>Facebook posts should now show.</p>
       </div>
     </div>
   </section>
