--- a/server/redirect.html
+++ b/server/redirect.html
@@ -36,7 +36,7 @@
     section {
       max-width: 800px;
       margin: 8% auto 1em auto;
-      background-color: #abc924;
+      background-color: #009688;
       opacity: 0.8;
       filter: alpha(opacity=80);
       /* For IE8 and earlier */
